# wireguard-rs

./: .gitignore  Cargo.toml  justfile
.github/workflows/: rust.yml
docker/: client-pk.key  client-sk.key  docker-compose.yml  run-tests-linux.sh  run-tests-macos.sh  run-tests.sh  server-pk.key  server-sk.key
docker/wireguard/wg_confs/: wg0.conf
src/: lib.rs  main.rs  run.rs
src/configuration/: config.rs
src/configuration/uapi/: mod.rs  set.rs
src/platform/: mod.rs
src/platform/dummy/: udp.rs
src/platform/dummy/tun/: dummy.rs  mod.rs
src/platform/linux/: uapi.rs  udp.rs
src/platform/macos/: fd.rs  mod.rs  sys.rs  tun.rs  udp.rs
src/platform/unix/: uapi.rs
src/run/: config.rs  error.rs  main_error.rs  main_result.rs  mod.rs  run.rs
src/wireguard/: mod.rs  peer.rs  tests.rs  timers.rs  wait_counter.rs  wireguard.rs  wireguard_handle.rs  workers.rs
src/wireguard/handshake/: device.rs  macs.rs  messages.rs  noise.rs  peer.rs  ratelimiter.rs
src/wireguard/router/: device.rs  ip.rs  peer.rs  queue.rs  receive.rs  route.rs  send.rs  types.rs  worker.rs
src/wireguard/router/tests/: bench.rs  mod.rs  tests.rs
wg-crypto/: Cargo.toml
wg-crypto/benches/: chacha20poly1305.rs
wg-crypto/src/: aead.rs  device.rs  keypair.rs  lib.rs  macs.rs  messages.rs  noise.rs  peer.rs  ratelimiter.rs  tests.rs  time.rs  timestamp.rs  types.rs
wg-crypto/src/tests/: common.rs  golden.rs  handshake.rs  mod.rs
wg-crypto/tests/: cross_version_test_vectors.rs  handshake_tests.rs  test_vectors.rs
wg-crypto/tests/common/: mod.rs
wg-platform/: Cargo.toml
wg-platform/src/: lib.rs
wg-platform/src/dummy/: endpoint.rs  tun.rs  udp.rs
wg-platform/src/linux/: tun.rs  udp.rs
wg-platform/src/macos/: tun.rs  udp.rs
wg-platform/src/std_lib/: mod.rs  udp.rs  udp_endpoint.rs  udp_owner.rs  udp_reader.rs  udp_socket_pair.rs  udp_writer.rs
wg-platform/src/std_udp/: mod.rs
wg-platform/src/unix/: uapi.rs
wg-traits/: Cargo.toml
wg-traits/src/: configuration.rs  endpoint.rs  lib.rs  udp.rs
wg-uapi/: Cargo.toml
wg-uapi/src/uapi/: config_operation.rs  config_response.rs  error.rs  get.rs  mod.rs  set.rs
wireguard-rs/: Cargo.toml
wireguard-rs/benches/: router.rs
wireguard-rs/src/: lib.rs  main.rs
wireguard-rs/src/configuration/: config.rs  error.rs  mod.rs
wireguard-rs/src/configuration/uapi/: config_operation.rs  get.rs  mod.rs  set.rs
wireguard-rs/src/peer/: constants.rs  decryption_state.rs  device_interface.rs  inbound_job.rs  mod.rs  outbound_job.rs  peer.rs  peer_handle.rs  peer_handle_interface.rs  peer_interface.rs  peer_state.rs  peer_state_interface.rs  send_queue.rs  timer_state.rs  timers.rs
wireguard-rs/src/platform/: mod.rs
wireguard-rs/src/platform/dummy/: endpoint.rs  mod.rs  udp.rs
wireguard-rs/src/router/: callbacks.rs  constants.rs  device.rs  encryption_queue.rs  fake_router.rs  ip.rs  mod.rs  parallel_queue.rs  peer_lookup.rs  receive.rs  receive_job.rs  receiver_lookup.rs  router.rs  routing_table.rs  send.rs  send_job.rs
wireguard-rs/src/router/peer/: decryption_state.rs  encryption_job.rs  inbound_job.rs  key_wheel.rs  mod.rs  outbound_job.rs  outbound_queue.rs  peer.rs  peer_state.rs  send_queue.rs  timer_state.rs
wireguard-rs/src/router/tests/: mod.rs  router_tests.rs
wireguard-rs/src/run/: error.rs  mod.rs  profiler.rs  run.rs  runner.rs  util.rs
wireguard-rs/src/run/workers/: handshake.rs  line_reader.rs  mod.rs  tun.rs  uapi.rs
wireguard-rs/src/tests/: mod.rs  router_tests.rs  wireguard_tests.rs
wireguard-rs/src/timers/: callbacks.rs  mod.rs  peer_callbacks.rs  peer_state.rs  timers.rs
wireguard-rs/src/wireguard/: config.rs  constants.rs  mod.rs  peer.rs  peer_callbacks.rs  peer_state.rs  queue.rs  tests.rs  timers.rs  udp_writer.rs  wireguard.rs  workers.rs
wireguard-rs/src/wireguard/peer/: constants.rs  timer_state.rs
wireguard-rs/src/wireguard/router/: anti_replay.rs  callbacks.rs  constants.rs  crypto_state.rs  device.rs  encryption_decryption_state.rs  ip.rs  key_wheel.rs  messages.rs  mod.rs  parallel_queue.rs  peer.rs  queue.rs  receive.rs  receiver_decryption_state.rs  route.rs  router_error.rs  send.rs  sequential_queue.rs  types.rs  worker.rs
wireguard-rs/src/wireguard/router/peer/: encryption_state.rs  key_wheel.rs  mod.rs  peer.rs  peer_inner.rs
wireguard-rs/src/wireguard/router/tests/: bench.rs  mod.rs  router_tests.rs  tests.rs
wireguard-rs/src/wireguard/timers/: callbacks.rs  mod.rs
wireguard-rs/src/wireguard/workers/: handshake.rs  mod.rs  tun.rs  udp.rs
wireguard-rs/src/workers/: constants.rs  handshake.rs  mod.rs  tun.rs  uapi.rs  udp.rs
