[workspace]
members = [
    "wireguard-rs",
    "wg-crypto",
    "wg-traits",
    "wg-platform",
]

resolver = "2"

[workspace.package]
authors = ["Mathias Hall-Andersen <mathias@hall-andersen.dk>"]
edition = "2024"
license = "MIT"
version = "0.1.4"

[workspace.dependencies]
# Cryptography
aead = "0.5"
blake2 = "0.10"
chacha20poly1305 = "0.10"
digest = "0.10"
generic-array = "^0.14"
hmac = "0.12"
rand = "0.8"
rand_core = "0.6"
ring = "0.17"
subtle = "2.6"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zeroize = "1.8.2"

# Utilities
anyhow = "1.0.100"
arraydeque = "0.4.5"
byteorder = "1.3"
crossbeam-channel = "^0.5"
dashmap = "^4.0"
env_logger = "^0.8"
hex = "0.4"
hjul = "0.2.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
parking_lot = "^0.11"
spin = "0.7"
zerocopy = "0.3"

# Optional
cpuprofiler = "*"

# IP network table
treebitmap = { package = "ip_network_table-deps-treebitmap", version = "0.5.0" }

# Unix dependencies
libc = "^0.2"

# macOS dependencies
nix = { version = "0.30", features = ["ioctl", "net", "socket", "uio"] }

# Dev dependencies
pnet = "0.35"
proptest = "^0.10"
rand_chacha = "0.3"
bencher = "0.1.5"
chacha20 = "0.9"
poly1305 = "0.8"
