[package]
name = "wg-platform"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wg-traits = { path = "../wg-traits" }
anyhow.workspace = true
log.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
nix.workspace = true
