[package]
name = "wg-platform"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wg-traits = { path = "../wg-traits" }
anyhow.workspace = true
log.workspace = true
hex = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
net2 = "0.2.39"

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
nix.workspace = true

[features]
dummy = ["hex", "rand"]
