[package]
name = "wg-platform"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wg-traits = { path = "../wg-traits" }
anyhow.workspace = true
log.workspace = true
hex = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
socket2 = { version = "0.6", features = ["all"] }

[target.'cfg(unix)'.dependencies]
libc.workspace = true
nix.workspace = true

[features]
dummy = ["hex", "rand"]
