[package]
name = "wireguard-rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wg-crypto = { path = "../wg-crypto" }
wg-traits = { path = "../wg-traits" }
wg-platform = { path = "../wg-platform" }
wg-uapi = { path = "../wg-uapi" }

aead.workspace = true
anyhow.workspace = true
arraydeque.workspace = true
blake2.workspace = true
byteorder.workspace = true
chacha20poly1305.workspace = true
cpuprofiler = { workspace = true, optional = true }
crossbeam-channel.workspace = true
dashmap.workspace = true
digest.workspace = true
env_logger.workspace = true
generic-array.workspace = true
hex.workspace = true
hjul.workspace = true
hmac.workspace = true
log.workspace = true
rand.workspace = true
rand_core.workspace = true
ring.workspace = true
spin.workspace = true
subtle.workspace = true
treebitmap.workspace = true
x25519-dalek.workspace = true
zerocopy.workspace = true
zeroize.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true


[features]
profiler = ["cpuprofiler"]
start_up = []
default = []

[dev-dependencies]
pnet.workspace = true
proptest.workspace = true
rand_chacha.workspace = true
bencher.workspace = true
wg-platform = { path = "../wg-platform", features = ["dummy"] }

[[bench]]
name = "router"
harness = false
